--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -153,3 +153,11 @@ table#report_list .report_title {
 table#report_list .report_action {
     width: 13%;
 }
+
+h3 {
+    font-size: larger;
+}
+
+pre {
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+}
